Use StringUtils in terms gate blank checks (#168)